building the dal

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -4,10 +4,10 @@
         <%- include('./partials/nav.ejs') %>
         <div class="menu content">
             <form action="/menu" method="POST">
-                <b>Menu: </b></br> 
+                <b>Menu: </b></br> <hr>
             <% if (theMenu.length > 0) { %>
                 <% theMenu.forEach(pizza => { %>
-                    <b><%= pizza.name %> <%= pizza.name %></b>
+                    <b><%= pizza.name %></b>
                     <a href="/menu/<%=pizza._id%>/edit?name=<%=pizza.name%>">edit</a>
                     <a href="/menu/<%=pizza._id%>/delete?name=<%=pizza.name%>">delete</a>
                     <a href="/menu/<%=pizza._id%>/replace?name=<%=pizza.name%>">replace</a></br> 
@@ -15,7 +15,7 @@
             <% } %>
             </br><label>Add Pizza:</label></br>
             <label> Name:
-                <!-- <input type="text" id="firstName" name="firstName" value="<%= locals.firstName %>" required> -->
+                <input type="text" id="name" name="name" value="<%= locals.name %>" required>
             </label>
             </br>
             <button>POST</button>
