--- a/views/pizzaDelete.ejs
+++ b/views/pizzaDelete.ejs
@@ -4,7 +4,7 @@
         <%- include('./partials/nav.ejs') %>
         <div class="create content">
             <form action="/menu/<%= locals.theId %>?_method=DELETE" method="POST">
-                <label>Are you sure you want to delete this Actor?</br>
+                <label>Are you sure you want to delete this Pizza?</br>
                     <input type="text" id="<%= locals.theId %>" name="name" value="<%= locals.name %>" readonly>
                 </label>
                 <button>DELETE</button>
