--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <body>
     <%- include('./partials/nav.ejs') %>
     <h1>Home Page</h1>
-    <h2>Welcome to the index page <%= name %>.</h2>
+    <h2>Serving up Authentic Neapolitan Style Pizzas!</h2>
   </body>
   <%- include('./partials/foot.ejs') %>
 </html>
