--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,10 @@
 <nav>
-  <h1>Welcome to Piatto Pizzaria</h1>
+  <div class="header">
+    <div><img src="../../public/images/Pizza-icon.png" width="50px" /></div>
+    <div><h1>Welcome to Piatto Pizzaria</h1></div>
+  </div>
   <a href="/">Home Page</a>
   <a href="/menu">Menu</a>
   <a href="/ingredients">Ingredients</a>
+  <hr />
 </nav>
