--- a/views/pizzaPatch.ejs
+++ b/views/pizzaPatch.ejs
@@ -7,7 +7,7 @@
                 <label>Edit Pizza Name:</br>
                     <input type="text" name="name" value="<%= locals.name %>" required>
                 </label></br>
-                <button>PATCH</button>
+                <button>Done</button>
             </form>
         </div>
     </body>
