--- a/views/pizzaPut.ejs
+++ b/views/pizzaPut.ejs
@@ -7,7 +7,7 @@
                 <label>Replace Pizza Name:</br>
                     <input type="text" name="name" value="<%= locals.name %>" required>
                 </label></br>
-                <button>PUT</button>
+                <button>Done</button>
             </form>
         </div>
     </body>
