--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,7 @@
 <head>
+  <link href="../public/styles.css" rel="stylesheet" type="text/css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="../../public/images/Pizza-icon.png" />
   <title>Piatto Pizzaria</title>
 </head>
