--- a/views/pizzaDelete.ejs
+++ b/views/pizzaDelete.ejs
@@ -7,7 +7,7 @@
                 <label>Are you sure you want to delete this Pizza?</br>
                     <input type="text" id="<%= locals.theId %>" name="name" value="<%= locals.name %>" readonly>
                 </label>
-                <button>DELETE</button>
+                <button>Delete</button>
             </form>
         </div>
     </body>
